[gd_scene load_steps=2 format=3 uid="uid://dh4mb04i2qcue"]

[ext_resource type="Script" path="res://scripts/ActivitysM1/escucha_reaciona.gd" id="1_ajnnp"]

[node name="EscuchaReaciona" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ajnnp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TituloLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Selecciona los pares"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 30.0
show_percentage = false

[node name="ParesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Par1" type="PanelContainer" parent="MarginContainer/VBoxContainer/ParesContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ParesContainer/Par1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par1/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "ðŸ”Š"

[node name="TextoButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "hat"

[node name="Par2" type="PanelContainer" parent="MarginContainer/VBoxContainer/ParesContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ParesContainer/Par2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par2/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "ðŸ”Š"

[node name="TextoButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "pap"

[node name="Par3" type="PanelContainer" parent="MarginContainer/VBoxContainer/ParesContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ParesContainer/Par3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par3/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "ðŸ”Š"

[node name="TextoButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "pap"

[node name="Par4" type="PanelContainer" parent="MarginContainer/VBoxContainer/ParesContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ParesContainer/Par4"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par4/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "ðŸ”Š"

[node name="TextoButton" type="Button" parent="MarginContainer/VBoxContainer/ParesContainer/Par4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "hat"

[node name="ComprobarButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "COMPROBAR"
